--- a/html5.html
+++ b/html5.html
@@ -33,6 +33,20 @@
     <li>Web 应用</li>
     <li>...</li>
 </ul>
+<details>
+    <summary>HTML5规范 发展历史</summary>
+    <ul>
+        <li>1999.12 HTML4.01</li>
+        <li>2006 WHATWG与W3C决定合作搞HTML5</li>
+        <li>2008.1.22日  HTML5第一份正式草案公布</li>
+        <li>2012.12.17  HTML5规范正式定稿</li>
+        <li>2013.5.6  HTML 5.1正式草案公布</li>
+        <li>2014.10.29  HTML5推荐标准规范最终制定完成并发布</li>
+        <li>2016.11.1  HTML 5.1的正式推荐标准发布</li>
+        <li>2016.8.18  HTML 5.2首个公开工作草案发布</li>
+        <li>2016.9.16  HTML 5.1的提案推荐标准发布</li>
+    </ul>
+</details>
 
 <h4>Input Control :</h4>
 <form>
